add-task-button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
             <p>task3</p>
           </div>
         </div>
-        <input type="submit" class="add-task-button" value="+" />
+
+        <div class="add-task-block">
+          <textarea
+            name="task-text"
+            class="task-text hiden"
+            placeholder=""
+            rows="4"
+          ></textarea>
+          <input type="button" class="add-task-button" value="+ Add a task" />
+        </div>
       </div>
 
       <div class="task-column">
@@ -41,7 +50,9 @@
             <p>task3</p>
           </div>
         </div>
-        <input type="submit" class="add-task-button" value="+" />
+        <div class="add-task-block">
+          <input type="submit" class="add-task-button" value="+ Add a task" />
+        </div>
       </div>
 
       <div class="task-column">
@@ -57,7 +68,9 @@
             <p>task3</p>
           </div>
         </div>
-        <input type="submit" class="add-task-button" value="+" />
+        <div class="add-task-block">
+          <input type="submit" class="add-task-button" value="+ Add a task" />
+        </div>
       </div>
     </div>
   </body>
