drag&drop mechanics

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <div id="to-do-column" class="task-column">
         <p class="column-title">ToDo</p>
         <div class="tasks">
-          <div class="task">
+          <div draggable="true" class="task">
             <p>task1</p>
           </div>
-          <div class="task">
+          <div draggable="true" class="task">
             <p>task2</p>
           </div>
-          <div class="task">
+          <div draggable="true" class="task">
             <p>task3</p>
           </div>
         </div>
@@ -40,13 +40,13 @@
       <div id="in-progress-column" class="task-column">
         <p class="column-title">InProgress</p>
         <div class="tasks">
-          <div class="task">
+          <div draggable="true" class="task">
             <p>task1</p>
           </div>
-          <div class="task">
+          <div draggable="true" class="task">
             <p>task2</p>
           </div>
-          <div class="task">
+          <div draggable="true" class="task">
             <p>task3</p>
           </div>
         </div>
@@ -64,13 +64,13 @@
       <div id="done-column" class="task-column">
         <p class="column-title">Done</p>
         <div class="tasks">
-          <div class="task">
+          <div draggable="true" class="task">
             <p>task1</p>
           </div>
-          <div class="task">
+          <div draggable="true" class="task">
             <p>task2</p>
           </div>
-          <div class="task">
+          <div draggable="true" class="task">
             <p>task3</p>
           </div>
         </div>
