Pull request fixes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="add-task-block">
           <textarea
             name="task-text"
-            class="task-text hiden"
+            class="task-text hidden"
             placeholder=""
             rows="4"
           ></textarea>
@@ -53,7 +53,7 @@
         <div class="add-task-block">
           <textarea
             name="task-text"
-            class="task-text hiden"
+            class="task-text hidden"
             placeholder=""
             rows="4"
           ></textarea>
@@ -77,7 +77,7 @@
         <div class="add-task-block">
           <textarea
             name="task-text"
-            class="task-text hiden"
+            class="task-text hidden"
             placeholder=""
             rows="4"
           ></textarea>
